WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266198
declarativeNetRequest's content rule list should not use the identifier for the filename
https://bugs.webkit.org/show_bug.cgi?id=266198
Summary
declarativeNetRequest's content rule list should not use the identifier for t...
Timothy Hatcher
Reported
2023-12-10 16:46:38 PST
The identifier does not need to be in the filename, since we are storing it in a folder with that same identifier in the name already alongside other extension state files. This needs some WKContentRuleListStore SPI to support it.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-10 16:46:46 PST
<
rdar://problem/119469953
>
Timothy Hatcher
Comment 2
2023-12-10 17:02:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21611
EWS
Comment 3
2023-12-11 15:21:18 PST
Committed
271903@main
(c96350ffd730): <
https://commits.webkit.org/271903@main
> Reviewed commits have been landed. Closing PR #21611 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug